--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 id="ToDo">ToDo</h1>
+    <h1 id="Doing">Doing</h1>
+    <h1 id="Done">Done</h1>
     
 </body>
 </html>
