--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 id="ToDo">ToDo</h1>
     <h1 id="Doing">Doing</h1>
-    <h1 id="Done">Done</h1>
+    <h1 id="Done">Don</h1>
     
 </body>
 </html>
