--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <div class="seccio2">DOING</div>
     <div class="seccio3">DONE</div>
 
-    <button class="afegir"> <i class="fas fa-plus-circle"></i></button>
+    <button class="afegir"><i class="fas fa-plus-circle"></i></button>
     
 
 
     <ul>
-        <li><a href="#"><button class="btn second">Editar</button>
-            <button class="btn one">Eliminar</button><h2>Títol #1</h2>
+        <li><a href="#"><button class="btn second"><i class="fas fa-edit"></i>Editar</button>
+            <button class="btn one"></button> <i class="fas fa-trash-alt"></i>Eliminar</button><h2>Títol #1</h2>
             <p>Contingut #1</p></a>
         </li>
     </ul>
