--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
     
 
 
-    <ul>
-        <li><a href="#"><button class="btn second"><i class="fas fa-edit"></i>Editar</button>
-            <button class="btn one"></button> <i class="fas fa-trash-alt"></i>Eliminar</button><h2>Títol #1</h2>
-            <p>Contingut #1</p></a>
+    <ul id="nota" class="primaria">
+        <li><a href="#">
+            <h1>TITOL</h1>
+            <h2>Encarregat // Inici-Final</h2>
+            <h4>Tasca</h4>
+            <button class="editar"><i class="fas fa-edit"></i></button>
+            <button class="eliminar"><i class="fas fa-trash-alt"></i>   </button>
+        </a>
         </li>
     </ul>
     
