--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
+      <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Reenie+Beanie"/>
     <title></title>
 
 </head>
@@ -21,11 +21,11 @@
     
     <ul id="nota" class="primaria">
         <li><a href="#">
+            <button class="editar"><i class="fas fa-edit"></i></button>
+            <button class="eliminar"><i class="fas fa-trash-alt"></i></button>
             <h1>TITOL</h1>
             <h2>Encarregat // Inici-Final</h2>
             <h4>Tasca</h4>
-            <button class="editar"><i class="fas fa-edit"></i></button>
-            <button class="eliminar"><i class="fas fa-trash-alt"></i>   </button>
         </a>
         </li>
     </ul>
