--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <button class="afegir"><i class="fas fa-plus-circle"></i></button>
     
-    <ul id="nota" class="primaria">
+    <ul id="nota" class="primaria" draggable="true">
         <li><a href="#">
             <button class="editar"><i class="fas fa-edit"></i></button>
             <button class="eliminar"><i class="fas fa-trash-alt"></i></button>
