--- a/formulari.html
+++ b/formulari.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Reenie+Beanie"/>
 
 </head>
-<body>
-
-    <h1 class="titol">TASCA</h1>
-    
+<body>    
 <table class="formulari">
+    <tr>
+        <td align="right">NOVA</td>
+        <td>TASCA:</td>
+    </tr>
+    <tr>
+        <td>ZONA: 1(ToDo) -> 2(Doing) -> 3(Done) -></td>
+        <td><input type="text" name="zona" size="1"/></td>
+    </tr>
     <tr>
         <td>ID :</td>
         <td><input type="text" name="codi" size="2"/></td>
@@ -22,11 +27,11 @@
         <td><input type="text" name="nom" size="25"/></td>
     </tr>
     <tr>
-        <td>Prev. Durada :</td>
+        <td>Prev.Durada:</td>
         <td><input type="date" name="data_de_previsio" size="5"/></td>
     </tr>
     <tr>
-        <td>Data Termini :</td>
+        <td>DataTermini:</td>
         <td><input type="date" name="data_de_termini" size="5"/></td>
     </tr>  
     <tr>
@@ -34,12 +39,14 @@
         <td><textarea name="descripcio" cols="25" rows="5"></textarea></td>
     </tr>
     <tr>
+        <td>PRIORITAT: 1(alta) -> 2(mitja) -> 3(baixa) -></td>
+        <td><input type="text" name="prioritat" size="1"/></td>
+    </tr>
+    <tr>
         <td></td>
         <td align="right"><button id="final">Finalitza</button></td>
     </tr>
-    
     </table>
-
     <script src="script.js"></script>
 </body>
 </html>
