--- a/formulari.html
+++ b/formulari.html
@@ -15,10 +15,6 @@
         <td>TASCA:</td>
     </tr>
     <tr>
-        <td>ZONA: 1(ToDo) -> 2(Doing) -> 3(Done) -></td>
-        <td><input type="text" name="zona" size="1"/></td>
-    </tr>
-    <tr>
         <td>ID :</td>
         <td><input type="text" name="codi" size="2"/></td>
     </tr>
@@ -28,7 +24,7 @@
     </tr>
     <tr>
         <td>Prev.Durada:</td>
-        <td><input type="date" name="data_de_previsio" size="5"/></td>
+        <td><input type="text" name="previsio_durada" size="2"/> (dies)</td>
     </tr>
     <tr>
         <td>DataTermini:</td>
@@ -37,10 +33,6 @@
     <tr>
         <td>Breu Descripció:</td>
         <td><textarea name="descripcio" cols="25" rows="5"></textarea></td>
-    </tr>
-    <tr>
-        <td>PRIORITAT: 1(alta) -> 2(mitja) -> 3(baixa) -></td>
-        <td><input type="text" name="prioritat" size="1"/></td>
     </tr>
     <tr>
         <td></td>
