--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<!-- afegim un titol i inclohem tant el fitxer d'estils com la referència que farem servir per als icones -->
 	<title>Projecte Kanban</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
 </head>
 <body>
+
+	<!-- tot seguit declararem un unic div general amb tota l'informació necesària per tenir-la com a guia
+		i poder despres seguir afegint html en aquest mateix div que anomenarem "taulell"-->
 	<div class="taulell">
 		<!-- <div class="taulell__column">
 			<div class="taulell__column-title">TO DO</div>
